# TheLexer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  error.hpp  main.cpp
core/: lexer.cpp  lexer.hpp  token.hpp
example/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Example.sln  Example.vcxproj  Example.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  example.txt  main.cpp
example/Debug/: example.txt
include/: error.hpp  exprAST.hpp  identifier.hpp  lexer.hpp  logger.hpp  parse.hpp  parser.hpp  token.hpp
include/AST/: exprAST.hpp  funcAST.hpp
src/: lexer.cpp  parse.cpp  parser.cpp
tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  Tests.sln  Tests.vcxproj  Tests.vcxproj.filters  cmake_install.cmake  main.cpp
tests/Debug/: errors.txt  numbers.txt  symbols.txt  tokens.txt
tests/assets/: numbers&tokens.txt  numbers.txt
